--- a/broadway_design/index.html
+++ b/broadway_design/index.html
@@ -6,14 +6,49 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Broadway Design</h1>
-    <nav>
-      <a href="">Home</a>
-      <a href="">Process</a>
-      <a href="">Work</a>
-      <a href="">Team</a>
-      <a href="">Contact</a>
-    </nav>
+    <div class="bg">
+      <h1>Broadway Design</h1>
+      <nav>
+        <a href="">Home</a><br /><br />
+        <a href="">Process</a><br /><br />
+        <a href="">Work</a><br /><br />
+        <a href="">Team</a><br /><br />
+        <a href="">Contact</a>
+      </nav>
+    </div>
+    <div class="our_process">
+      <h2>Our Process</h2>
+      <img src="./resources/identify.svg">
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <img src="./resources/understand.svg">
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <img src="./resources/execute.svg">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
+    <div class="bg">
+      <h3>Designed in New York</h3>
+    </div>
+    <h3>Portfolio</h3>
+    <p>Coming Song</p>
+    <h3>Team</h3>
+    <p>We're Hiring</p>
+    <h3>Contact</h3>
+    <p>Phone: (555)-555-5555</p>
+    <p>E-mail: test@example.com</p>
+    <p>Twitter: @test</p>
+    <div class="footer">
+      <p>© Broadway 2016</p>
+      <nav>
+        <a href="">Home</a>
+        <a href="">Process</a>
+        <a href="">Work</a>
+        <a href="">Team</a>
+        <a href="">Contact</a>
+      </nav>
+    </div>
 
 
   </body>
